// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Add 1`] = `
<button
  className="Button-pzvjfl-0 lntRdW"
>
  Hinzufügen
</button>
`;

exports[`Storyshots Components/Button Order 1`] = `
<button
  className="Button-pzvjfl-0 lntRdW"
>
  Bestellen
</button>
`;

exports[`Storyshots Components/Cards/Extra Large Product 1`] = `
<div
  className="CardExtraLarge__Container-fu46da-0 iCNjIY"
>
  <h2>
    Blaue Box
  </h2>
  <div
    className="CardExtraLarge__CardImage-fu46da-1 jMQAFB"
  >
    <div
      className="CardExtraLarge__CardImage-fu46da-1 jMQAFB"
    >
      <img
        src="https://via.placeholder.com/240"
      />
    </div>
  </div>
  <article
    className="CardExtraLarge__CardDescription-fu46da-2 dFFSoh"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis aspernatur tenetur culpa illum molestiae officia ...
  </article>
  <article>
    <h3>
      Leistungsumfang:
    </h3>
    <ul>
      <li>
        Eine blaue Box
      </li>
      <li>
        Lieferung und Montage
      </li>
      <li>
        Entsorgung der alten grauen Box
      </li>
    </ul>
  </article>
  <aside
    className="CardExtraLarge__CardPrice-fu46da-3 grsCJX"
  >
    Preis: € 
    328.5
  </aside>
  <a
    href="/customers"
    onClick={[Function]}
  >
    <button
      className="Button-pzvjfl-0 lntRdW"
      onClick={[Function]}
    >
      Hinzufügen
    </button>
  </a>
</div>
`;

exports[`Storyshots Components/Cards/Large Product 1`] = `
<div
  className="CardLarge__Container-s54zhd-0 fidxZc"
>
  <h2>
    Blaue Box
  </h2>
  <div
    className="CardLarge__CardImage-s54zhd-1 brXhcv"
  >
    <img
      src="https://via.placeholder.com/150"
    />
  </div>
  <article
    className="CardLarge__CardDescription-s54zhd-2 bVsbFz"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ips...
  </article>
  <aside
    className="CardLarge__CardPrice-s54zhd-3 jjmLul"
  >
    Preis: € 
    328.5
  </aside>
</div>
`;

exports[`Storyshots Components/Cards/Medium Product 1`] = `
<div
  className="CardMedium__Container-ud6k7h-0 gPCKwI"
>
  <div
    className="CardMedium__CardImage-ud6k7h-3 ilNQcw"
  >
    <img
      src="https://via.placeholder.com/100"
    />
  </div>
  <div
    className="CardMedium__DescriptionContainer-ud6k7h-1 gcGxjk"
  >
    <h2>
      Blaue Box
    </h2>
    <div
      className="CardMedium__DetailsContainer-ud6k7h-2 fXBuwY"
    >
      <p>
        € 
        328.5
      </p>
      <p>
        x 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Small Category 1`] = `
<div
  className="CardSmall__Container-sc-1c3qeca-0 bJvTMD"
>
  <h2>
    Kategorie
  </h2>
  <p>
    Lorem ipsum dolor sit
  </p>
</div>
`;

exports[`Storyshots Components/Cards/Small Customer 1`] = `
<div
  className="CardSmall__Container-sc-1c3qeca-0 bJvTMD"
>
  <h2>
    Max Mustermann
  </h2>
  <p>
    Musterstraße 95
  </p>
  <p>
    48924 Musterstadt
  </p>
</div>
`;

exports[`Storyshots Components/Header Default 1`] = `
<header
  className="Header__Container-sc-17wre1r-0 fflpnF"
>
  <h1
    className="Header__Title-sc-17wre1r-1 dMDOcO"
  >
    Home
  </h1>
</header>
`;

exports[`Storyshots Components/Navbar Bottom Default 1`] = `
<div
  className="NavbarBottom__Container-okzrgt-0 bbVMRI"
>
  <a
    aria-current="page"
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
    href="/"
    onClick={[Function]}
    style={
      Object {
        "fill": "var(--primary-third)",
      }
    }
  >
    <svg>
      home.svg
    </svg>
  </a>
  <a
    aria-current={null}
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
    href="/items"
    onClick={[Function]}
  >
    <svg>
      find_in_page.svg
    </svg>
  </a>
  <a
    aria-current={null}
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
    href="/checkout"
    onClick={[Function]}
  >
    <svg>
      shopping_cart.svg
    </svg>
  </a>
  <a
    aria-current={null}
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
    href="/profile"
    onClick={[Function]}
  >
    <svg>
      profile.svg
    </svg>
  </a>
</div>
`;

exports[`Storyshots Components/Searchbar Default 1`] = `
<input
  className="Searchbar-sc-1bd71k1-0 xnXli"
  placeholder="Suche"
/>
`;
